# ChangeLog for dev-java/idm-console-framework
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +idm-console-framework-1.1.3-r1.ebuild:
  eapi 2 support

  20 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  idm-console-framework-1.1.3.ebuild:
  add ~amd64

*idm-console-framework-1.1.3 (08 Aug 2009)

  08 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +idm-console-framework-1.1.3.ebuild, +metadata.xml:
  initial commit
