@@ -1,4 +1,6 @@
 DIST idm-console-framework-1.1.3.tar.bz2 719653 RMD160 cf071bd9a99020f44c8ebad62eacfeedf84fe7e8 SHA1 b234a0549e80b739672323e963ae149a5be188df SHA256 e47d62afe2f01f6eb75767d433cfd0d10a49f267105b379a8e86aed3e096eb36
+DIST idm-console-framework-1.1.5.tar.bz2 706718 RMD160 68b9b5ba61a4c446a92814b34188322ced150a00 SHA1 15f1d2af4cac986c6caad39f4ed02191169fcb42 SHA256 6d4d08955bab2bdbda624bca4c21486f310a4044cf5a8c47d0b3697ec99d9121
 EBUILD idm-console-framework-1.1.3-r1.ebuild 1642 RMD160 7da6edbc104fd5874bb8df9357f9bdb67ef08dad SHA1 5be2520fd123e037cc7cb9b55d9aa74bf870b1f9 SHA256 b04bc1e4e36ff034ef05c27aea6cef8ae5cda8ef9ba7f7641ab2daad0d7f9fd5
-MISC ChangeLog 518 RMD160 753f43c8b89d90ca94719214d00e57756c8e35af SHA1 9bfed3c97f27d5f5991b361439c3f13684ae8512 SHA256 92142a39a761918fb432da5e04eb83ce1319f9b779467d615305f3c0ee4c6068
+EBUILD idm-console-framework-1.1.5.ebuild 1642 RMD160 de20606caa83a6c3b493de9b0c1a11f5edf04904 SHA1 87086d86cfc7aa0961a407e62c296454431d7148 SHA256 7c246f11631a2021c8c7f213a04bdb2630c1dc39c22492c59c6e980147f7a506
+MISC ChangeLog 633 RMD160 ec49ecbe8abf712d210f0332806b1d20faeec34d SHA1 adae71e81a09b98b30320f3b7c013114000bb704 SHA256 a6375225fc82006570668aff742ec006d319d63afdfcdecb9443ecde82eeafb5
 MISC metadata.xml 416 RMD160 5a60964fb0f508ad54e9a68a95d8effb9106744f SHA1 a5804f180ca14eeaaff312822be1770bc79892d4 SHA256 e403b237fa37574521bfcd478f52062de94ae3cb7c0f27bcb24d55b4b27b8c1b
