@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/idm-console-framework
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*idm-console-framework-1.1.5
+
+  01 Jun 2010; <slep@gentoo.org> +idm-console-framework-1.1.5.ebuild:
+  new version
 
   11 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +idm-console-framework-1.1.3-r1.ebuild:
